--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,14 @@ section.section {
     background-image: url(../img/testimonios/3.jpg);
     height:300px;
 }
+#testimonials-4{	
+    background-image: url(../img/testimonios/6.jpg);
+    height:300px;
+}
+#testimonials-5{	
+    background-image: url(../img/testimonios/7.jpg);
+    height:300px;
+}
 
 /*===========================
         ---Pricing---
