--- a/css/style.css
+++ b/css/style.css
@@ -13,19 +13,22 @@
 body {
     font-family: "Titillium Web", Helvetica, Arial, sans-serif;
     color: rgb(14, 14, 94);
-    background: #f7f7f7;
+    background: white;
     font-size: 16px;
     line-height: 1.6em;
     font-weight: 300;
     text-shadow: none;
 }
 
-
-
 #copyRight{
-
     color: #F29A25;
     font-size: 19px; 
+}
+
+
+#nosotros{
+    
+    border-top: 20px solid #1E79B3;
 }
 
 #direccion{
@@ -53,11 +56,12 @@ h1, h2, h3, h4, h5, h6 {
 
 h1,h2,h3,h4,h5,h6 {
     font-style: normal;
-    margin: 0 0 20px 0;
+    margin: -11px 0 20px 0;
 }
 h1 { font-size: 40px; line-height: 30px; }
 h2 { font-size: 32px; }
-h3 { font-size: 24px; }
+h3 { font-size: 24px; 
+     color: orange}
 h4 { font-size: 18px; }
 h5 { font-size: 16px; }
 .txt-light { font-weight: 300; }
@@ -850,7 +854,7 @@ section.featured h2.slogan {
     padding-bottom: 20px;
 }
 .title{
-    padding-top: 100px;
+
     text-align: center;
 }
 .list-style{
@@ -942,7 +946,9 @@ section.featured.inner {
 }
 /*id*/
 #header img {
-    height: 600px;
+    height: 50px;
+    margin-top: 17px;
+    width:  50px;
 }
 #section-services {
     background-color: #fff;
@@ -1117,8 +1123,8 @@ About
     margin-bottom: 30px;
 }
 .team-member {
-    margin: 0 40px 40px;
-    padding: 10px;
+    margin: 0 25px 70px;
+    padding: 30px;
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
     -o-transition: all 0.2s ease-out;
@@ -1139,7 +1145,7 @@ About
     -webkit-background-clip: border-box;
     background-clip: border-box;
     overflow: hidden;
-    max-width: 240px;
+    max-width: 200px;
     width: 100%;
     height: 100%;
     margin: 0 auto;
